--- a/JS/V1/public_html/3D.html
+++ b/JS/V1/public_html/3D.html
@@ -10,7 +10,7 @@
     <body>
         <main class="container">
             <div class="row mt-2">
-                <div class="col-2">
+                <div class="col-3">
                     <div class="row">
                         <div class="col">
                             <h2>
@@ -43,20 +43,44 @@
                             <span id="form_bathymetry__btn_ok" class="btn btn-success">Ok</span>
                         </div>
                     </div> 
+                    <div class="row mt-5">
+                        <div class="col">
+                            <div class="d-block">
+                                <b>Глубина</b><br>
+                                <div id="sonar__palette_depth_min_text" class="d-inline-block" style="width: 50px;"></div>
+                                <div class="d-inline-block"><div id="sonar__palette_depth"></div></div>
+                                <div id="sonar__palette_depth_max_text" class="d-inline-block"></div>
+                            </div>
+                            <div class="d-block mt-3">
+                                <input id="sonar__over_bottom" type="checkbox" checked> В толще воды  
+                                <!--input id="sonar__full_bottom" type="checkbox" checked> bottom  &nbsp;&nbsp;&nbsp;-->
+                            </div>
+                            <div class="d-block">
+                                <input id="sonar__circles" type="checkbox" checked> Точки  
+                            </div>
+                            <div class="d-block mt-3">
+                                <b>Мощность отражений</b><br>
+                                <input type="range" class="form-range" min="0" max="3000" value="0" id="sonar__range_pulse_w_min_show" title="Мощность отраженок, скрыть слабые"> 
+                                скрыть слабее <span id="sonar__range_pulse_w_min_show_val"></span>
+                            </div>
+                            <div class="d-block mt-3">
+                                <div class="d-block">
+                                    <b>Мощность отражений: палитра</b><br>
+                                    <input type="range" class="form-range" min="0" max="3000" value="2000" id="sonar__range_pulse_w_max" title="Мощность отраженок MAX для палитры"> 
+                                </div>
+                                <div class="d-block align-middle"> 
+                                    <span id="sonar__range_pulse_w_min_val">0mks</span> 
+                                    <div class="d-inline-block align-middle">
+                                        <div class="d-block"><div id="sonar__palette_power_rgb"></div></div>
+                                        <div class="d-block"><div id="sonar__palette_power_bw"></div></div>
+                                    </div>
+                                    <span id="sonar__range_pulse_w_max_val"></span>
+                                </div>                                
+                            </div>
+                        </div>
+                    </div> 
                 </div> 
-                <div class="col-10">
-                    <div class="d-block">
-                        <div id="sonar__palette_depth_min_text" class="d-inline-block"></div>
-                        <div class="d-inline-block"><div id="sonar__palette_depth"></div></div>
-                        <div id="sonar__palette_depth_max_text" class="d-inline-block"></div>
-                        <input id="sonar__over_bottom" type="checkbox" checked> В толще воды  &nbsp;&nbsp;&nbsp; 
-                        <!--input id="sonar__full_bottom" type="checkbox" checked> bottom  &nbsp;&nbsp;&nbsp;-->
-                        <input id="sonar__circles" type="checkbox" checked> Точки  &nbsp;&nbsp;&nbsp;
-
-                        <input type="range" class="form-range" min="0" max="3000" value="0" id="sonar__range_pulse_w" title="Мощность отраженок, скрыть слабые" style="width: 150px;"> 
-                        <span id="sonar__range_pulse_w_val"></span>&nbsp;&nbsp;&nbsp;
-                        <div class="d-inline-block"><div id="sonar__palette_depth"></div></div>
-                    </div>   
+                <div class="col-9">
                     <div id="sonar__2D_block_latconst_lng"></div>
                     <div id="sonar__2D_block_lat_lngconst"></div>                    
                     <div id="sonar__3D_block"></div>
@@ -90,7 +114,7 @@
                 ];
                 let sonar__lat_min = 1000, sonar__lng_min = 1000, sonar__lat_max = 0, sonar__lng_max = 0;
                 let sonar__getOffsetLng_px_dx = 0;
-                let sonar__getColor_m_dx = 1;
+                let sonar__getColor_depth_m_dx = 1;
                 let sonar__mks2px_fullScale_dx = 1;
                 let sonar__getOffsetLat_px_dx = 1;
                 const sonar__block_size_px = 800;
@@ -98,7 +122,7 @@
                 const sonar__mks2m = 1367.0;
                 let sonar__pulse_w_px = 10;
                 let sonar__3D_pointsLatLng = [];
-                const sonar__colorsRGB_power = [
+                const sonar__palette_power_rgb = [
                     '#0011fa',
                     '#016efa',
                     '#03cbfa',
@@ -109,7 +133,7 @@
                     '#fa4503',
                     '#fa0303'
                 ]; //9                    
-                const sonar__colorsWB_power = [
+                const sonar__palette_power_bw = [
                     '#f0f1f5',
                     '#d2d3d7',
                     '#b5b6b9',
@@ -119,14 +143,12 @@
                     '#3f4041',
                     '#222223',
                     '#050505'
-                ]; //9
-                const sonar__colors_power_min_mks = 0;
-                const sonar__colors_power_max_mks = 2000;
-                const sonar__colors_power_dx = (sonar__colors_power_max_mks - sonar__colors_power_min_mks) / sonar__colorsRGB_power.length;
+                ]; //9                
+                let sonar__colors_power_dx = (2000 - 0) / sonar__palette_power_rgb.length; //default, change by input-range
 
 
                 document.addEventListener('DOMContentLoaded', function () {
-                    sonar__palette_depth();
+                    sonar__palettes();
                     sonar__actions();
                 });
 
@@ -155,8 +177,8 @@
                             $('div.sonar__circles').hide();
                         }
                     });
-                    $('#sonar__range_pulse_w').change(() => {
-                        const pulseW_mks = parseInt($('#sonar__range_pulse_w').val()) || 0;
+                    $('#sonar__range_pulse_w_min_show').change(() => {
+                        const pulseW_mks = parseInt($('#sonar__range_pulse_w_min_show').val()) || 0;
                         if ($('#sonar__over_bottom').is(":checked")) {
                             $('div.logic_pulseOverBottom').show().filter(function () {
                                 return $(this).attr('w_mks') < pulseW_mks;
@@ -171,7 +193,25 @@
                             return $(this).attr('w_mks') < pulseW_mks;
                         }).hide();
 
-                        $('#sonar__range_pulse_w_val').html(pulseW_mks + 'mks');
+                        $('#sonar__range_pulse_w_min_show_val').html(pulseW_mks + 'mks');
+                    });
+
+                    $('#sonar__range_pulse_w_max').change(() => {
+                        const pulseW_mks = parseInt($('#sonar__range_pulse_w_max').val()) || 0;
+                        sonar__colors_power_dx = (pulseW_mks - 0) / sonar__palette_power_rgb.length;
+                        $('#sonar__range_pulse_w_max_val').html(pulseW_mks + 'mks');
+                        sonar__pulses_setColor();
+                    });
+                }
+
+                function sonar__pulses_setColor() {
+                    $('div.sonar__2D_pulse').each(function () {
+                        const w_mks = parseInt($(this).attr('w_mks')) || 0;
+                        $(this).css('background-color', sonar__getColor_power_mks(w_mks, false));
+                    });
+                    $('div.logic_pulseOverBottom').each(function () {
+                        const w_mks = parseInt($(this).attr('w_mks')) || 0;
+                        $(this).css('background-color', sonar__getColor_power_mks(w_mks, true));
                     });
                 }
 
@@ -292,7 +332,7 @@
                     $('#sonar__palette_depth_min_text').html(Math.round(sonar__depth_min * 100) / 100 + 'm');
                     $('#sonar__palette_depth_max_text').html(Math.round(sonar__depth_max * 100) / 100 + 'm');
 
-                    sonar__getColor_m_dx = (sonar__depth_max - sonar__depth_min) / sonar__colors_depth.length;
+                    sonar__getColor_depth_m_dx = (sonar__depth_max - sonar__depth_min) / sonar__colors_depth.length;
                     sonar__mks2px_fullScale_dx = (2 * depth_max_allow * sonar__mks2m) / sonar__logic_pulsesOverBottom_block_h_px;
                     sonar__getOffsetLng_px_dx = (sonar__lng_max - sonar__lng_min) / sonar__block_size_px;
                     sonar__getOffsetLat_px_dx = (sonar__lat_max - sonar__lat_min) / sonar__block_size_px; //max size paper
@@ -331,21 +371,21 @@
                         const lng_curr = parseFloat(ll[1]) || 0;
                         if (lat5 === Math.round(lat_curr * 100000) / 100000) {
                             $('#sonar__2D_block_latconst_lng').append(sonar__2D_point(lat_curr, lng_curr, sonar__3D_pointsLatLng[index], false));
-                            console.log('latconst', lat_curr, lng_curr);
+                            //console.log('latconst', lat_curr, lng_curr);
                         }
                         if (lng5 === Math.round(lng_curr * 100000) / 100000) {
                             $('#sonar__2D_block_lat_lngconst').append(sonar__2D_point(lat_curr, lng_curr, sonar__3D_pointsLatLng[index], true));
-                            console.log('lngconst', lat_curr, lng_curr);
+                            //console.log('lngconst', lat_curr, lng_curr);
                         }
                     }
 
-                    const pulseW_mks = parseInt($('#sonar__range_pulse_w').val()) || 0;
+                    const pulseW_mks = parseInt($('#sonar__range_pulse_w_min_show').val()) || 0;
                     $('div.sonar__2D_pulse').show().filter(function () {
                         return $(this).attr('w_mks') < pulseW_mks;
                     }).hide();
                 }
                 function sonar__2D_point(lat, lng, data, isVertical) {
-                    const depth_color = sonar__getColor_m(data.depthM);
+                    const depth_color = sonar__getColor_depth_m(data.depthM);
                     const left_px = isVertical ? sonar__block_size_px - sonar__getOffsetLat_px(lat) : sonar__getOffsetLng_px(lng);
 
                     let html = '<div class="sonar__2D_pulses" title="' + (Math.round(data.depthM * 100) / 100) + 'm" lat="' + lat + '" lng="' + lng + '" style="left:' + left_px + 'px; background-color:' + depth_color + '; width:' + sonar__pulse_w_px + 'px; "></div>';
@@ -353,7 +393,7 @@
                         if (pulse.R >= (data.depth_mks - 100)) {
                             continue; //only fish over bottom                            
                         }
-                        const pulse_color = sonar__getColor_mks(pulse.W, false);
+                        const pulse_color = sonar__getColor_power_mks(pulse.W, false);
                         let mt_px = sonar__mks2px(pulse.R, data.depth_mks);
                         html += '<div class="sonar__2D_pulse" title="' + (Math.round((pulse.R / sonar__mks2m) * 100) / 100) + 'm R=' + pulse.R + ' W=' + pulse.W + '" w_mks="' + pulse.W + '" style="left:' + left_px + 'px; top:' + mt_px + 'px; width:' + (sonar__pulse_w_px - 2) + 'px; background-color:' + pulse_color + '; z-index:' + pulse.W + '; "></div>';
                     }
@@ -362,15 +402,23 @@
                 }
 
 
-                function sonar__palette_depth() {
+                function sonar__palettes() {
                     for (const color of sonar__colors_depth) {
                         const dv = '<div class="palette__item d-inline-block" style="background-color:' + color + '"></div>';
                         $('#sonar__palette_depth').append(dv);
                     }
+                    for (const color of sonar__palette_power_rgb) {
+                        const dv = '<div class="palette__item d-inline-block" style="background-color:' + color + '"></div>';
+                        $('#sonar__palette_power_rgb').append(dv);
+                    }
+                    for (const color of sonar__palette_power_bw) {
+                        const dv = '<div class="palette__item d-inline-block" style="background-color:' + color + '"></div>';
+                        $('#sonar__palette_power_bw').append(dv);
+                    }
                 }
 
                 function sonar__3D_point(lat, lng, data) {
-                    const depth_color = sonar__getColor_m(data.depthM);
+                    const depth_color = sonar__getColor_depth_m(data.depthM);
                     const left_px = sonar__getOffsetLng_px(lng);
                     const top_px = sonar__block_size_px - sonar__getOffsetLat_px(lat);
 
@@ -379,7 +427,7 @@
                         if (pulse.R >= (data.depth_mks - 100)) {
                             continue; //only fish over bottom                            
                         }
-                        pulse_color = sonar__getColor_mks(pulse.W, true); //fish over bottom 
+                        pulse_color = sonar__getColor_power_mks(pulse.W, true); //fish over bottom 
                         let mt_px = sonar__mks2px(pulse.R, data.depth_mks);
                         html += '<div class="logic_pulseOverBottom" title="R=' + pulse.R + ' W=' + pulse.W + ' ' + (Math.round((pulse.R / sonar__mks2m) * 100) / 100) + 'm" w_mks="' + pulse.W + '" style="top:' + mt_px + 'px; width:' + (sonar__pulse_w_px - 2) + 'px; background-color:' + pulse_color + '; "></div>';
                     }
@@ -392,7 +440,7 @@
                      pulse_color = depth_color; //bottom and under
                      pulse_opacity = 1;
                      } else {
-                     pulse_color = sonar__getColor_mks(pulse.W, true); //fish over bottom  
+                     pulse_color = sonar__getColor_power_mks(pulse.W, true); //fish over bottom  
                      pulse_opacity = 1;
                      }
                      let mt_px = sonar__mks2px_fullScale(pulse.R);
@@ -408,16 +456,16 @@
                 }
 
 
-                function sonar__getColor_m(m) {
-                    let idx = Math.round(m / sonar__getColor_m_dx);
+                function sonar__getColor_depth_m(m) {
+                    let idx = Math.round(m / sonar__getColor_depth_m_dx);
                     idx = Math.min(Math.max(parseInt(idx), 0), (sonar__colors_depth.length - 1)); //constrain from to
                     return sonar__colors_depth[idx];
                 }
 
-                function sonar__getColor_mks(mks, isWB) {
+                function sonar__getColor_power_mks(mks, isWB) {
                     let idx = Math.round(mks / sonar__colors_power_dx);
-                    idx = Math.min(Math.max(parseInt(idx), 0), (sonar__colorsRGB_power.length - 1)); //constrain from to
-                    return isWB ? sonar__colorsWB_power[idx] : sonar__colorsRGB_power[idx];
+                    idx = Math.min(Math.max(parseInt(idx), 0), (sonar__palette_power_rgb.length - 1)); //constrain from to
+                    return isWB ? sonar__palette_power_bw[idx] : sonar__palette_power_rgb[idx];
                 }
 
                 function sonar__mks2px(mks, point_depth_mks) {
