--- a/JS/V1/public_html/3D.html
+++ b/JS/V1/public_html/3D.html
@@ -66,6 +66,9 @@
                             <div class="d-block mt-3">
                                 <div class="d-block">
                                     <b>Мощность отражений: палитра</b><br>
+                                    <div class="d-block">
+                                        <input id="sonar__palette_power_isBW" type="checkbox" checked> BW \ RGB  
+                                    </div>
                                     <input type="range" class="form-range" min="0" max="3000" value="2000" id="sonar__range_pulse_w_max" title="Мощность отраженок MAX для палитры"> 
                                 </div>
                                 <div class="d-block align-middle"> 
@@ -145,6 +148,7 @@
                     '#050505'
                 ]; //9                
                 let sonar__colors_power_dx = (2000 - 0) / sonar__palette_power_rgb.length; //default, change by input-range
+                let sonar__colors_power_isBW = true;
 
 
                 document.addEventListener('DOMContentLoaded', function () {
@@ -195,7 +199,10 @@
 
                         $('#sonar__range_pulse_w_min_show_val').html(pulseW_mks + 'mks');
                     });
-
+                    $('#sonar__palette_power_isBW').change(() => {
+                        sonar__colors_power_isBW = $('#sonar__palette_power_isBW').is(":checked");
+                        sonar__pulses_setColor();
+                    });
                     $('#sonar__range_pulse_w_max').change(() => {
                         const pulseW_mks = parseInt($('#sonar__range_pulse_w_max').val()) || 0;
                         sonar__colors_power_dx = (pulseW_mks - 0) / sonar__palette_power_rgb.length;
@@ -207,11 +214,11 @@
                 function sonar__pulses_setColor() {
                     $('div.sonar__2D_pulse').each(function () {
                         const w_mks = parseInt($(this).attr('w_mks')) || 0;
-                        $(this).css('background-color', sonar__getColor_power_mks(w_mks, false));
+                        $(this).css('background-color', sonar__getColor_power_mks(w_mks, sonar__colors_power_isBW));
                     });
                     $('div.logic_pulseOverBottom').each(function () {
                         const w_mks = parseInt($(this).attr('w_mks')) || 0;
-                        $(this).css('background-color', sonar__getColor_power_mks(w_mks, true));
+                        $(this).css('background-color', sonar__getColor_power_mks(w_mks, sonar__colors_power_isBW));
                     });
                 }
 
@@ -393,7 +400,7 @@
                         if (pulse.R >= (data.depth_mks - 100)) {
                             continue; //only fish over bottom                            
                         }
-                        const pulse_color = sonar__getColor_power_mks(pulse.W, false);
+                        const pulse_color = sonar__getColor_power_mks(pulse.W, sonar__colors_power_isBW);
                         let mt_px = sonar__mks2px(pulse.R, data.depth_mks);
                         html += '<div class="sonar__2D_pulse" title="' + (Math.round((pulse.R / sonar__mks2m) * 100) / 100) + 'm R=' + pulse.R + ' W=' + pulse.W + '" w_mks="' + pulse.W + '" style="left:' + left_px + 'px; top:' + mt_px + 'px; width:' + (sonar__pulse_w_px - 2) + 'px; background-color:' + pulse_color + '; z-index:' + pulse.W + '; "></div>';
                     }
@@ -427,7 +434,7 @@
                         if (pulse.R >= (data.depth_mks - 100)) {
                             continue; //only fish over bottom                            
                         }
-                        pulse_color = sonar__getColor_power_mks(pulse.W, true); //fish over bottom 
+                        pulse_color = sonar__getColor_power_mks(pulse.W, sonar__colors_power_isBW); //fish over bottom 
                         let mt_px = sonar__mks2px(pulse.R, data.depth_mks);
                         html += '<div class="logic_pulseOverBottom" title="R=' + pulse.R + ' W=' + pulse.W + ' ' + (Math.round((pulse.R / sonar__mks2m) * 100) / 100) + 'm" w_mks="' + pulse.W + '" style="top:' + mt_px + 'px; width:' + (sonar__pulse_w_px - 2) + 'px; background-color:' + pulse_color + '; "></div>';
                     }
