--- a/JS/V1/public_html/3D.html
+++ b/JS/V1/public_html/3D.html
@@ -220,6 +220,13 @@
                         const w_mks = parseInt($(this).attr('w_mks')) || 0;
                         $(this).css('background-color', sonar__getColor_power_mks(w_mks, sonar__colors_power_isBW));
                     });
+                    if (sonar__colors_power_isBW) {
+                        $('div.sonar__2D_pulse').css('opacity', 0.6);
+                       //$('div.logic_pulseOverBottom').css('opacity', 0.6);
+                    } else {
+                        $('div.sonar__2D_pulse').css('opacity', 1);
+                        //$('div.logic_pulseOverBottom').css('opacity', 1);
+                    }
                 }
 
                 function sonar__getPulse_w_realBottom_mks_min(depth_mks) {
