--- a/JS/V1/public_html/3D.html
+++ b/JS/V1/public_html/3D.html
@@ -388,14 +388,15 @@
                         const lng_curr = parseFloat(ll[1]) || 0;
                         const dLat = Math.abs(lat_curr - lat);
                         const dLng = Math.abs(lng_curr - lng);
-                        if (dLat<=0.00001) {
-                            $('#sonar__2D_block_latconst_lng').append(sonar__2D_point(lat_curr, lng_curr, sonar__3D_pointsLatLng[index], false));                            
+                        if (dLat <= 0.00001) {
+                            $('#sonar__2D_block_latconst_lng').append(sonar__2D_point(lat_curr, lng_curr, sonar__3D_pointsLatLng[index], false));
                         }
-                        if (dLng<=0.00001) {
-                            $('#sonar__2D_block_lat_lngconst').append(sonar__2D_point(lat_curr, lng_curr, sonar__3D_pointsLatLng[index], true));                            
+                        if (dLng <= 0.00001) {
+                            $('#sonar__2D_block_lat_lngconst').append(sonar__2D_point(lat_curr, lng_curr, sonar__3D_pointsLatLng[index], true));
                         }
                     }
 
+                    //hide weak signals
                     const pulseW_mks = parseInt($('#sonar__range_pulse_w_min_show').val()) || 0;
                     $('div.sonar__2D_pulse').show().filter(function () {
                         return $(this).attr('w_mks') < pulseW_mks;
@@ -404,14 +405,15 @@
                 function sonar__2D_point(lat, lng, data, isVertical) {
                     const depth_color = sonar__getColor_depth_m(data.depthM);
                     const left_px = isVertical ? sonar__block_size_px - sonar__getOffsetLat_px(lat) : sonar__getOffsetLng_px(lng);
+                    let mt_px = 5+sonar__mks2px(data.depth_mks, sonar__depth_max * sonar__mks2m);
 
-                    let html = '<div class="sonar__2D_pulses" title="' + (Math.round(data.depthM * 100) / 100) + 'm" lat="' + lat + '" lng="' + lng + '" style="left:' + left_px + 'px; background-color:' + depth_color + '; width:' + sonar__pulse_w_px + 'px; "></div>';
+                    let html = '<div class="sonar__2D_pulses" title="' + (Math.round(data.depthM * 100) / 100) + 'm" lat="' + lat + '" lng="' + lng + '" style="left:' + left_px + 'px; top:' + mt_px + 'px; background-color:' + depth_color + '; width:' + sonar__pulse_w_px + 'px; "></div>';
                     for (const pulse of data.pulses) {
                         if (pulse.R >= (data.depth_mks - 100)) {
                             continue; //only fish over bottom                            
                         }
                         const pulse_color = sonar__getColor_power_mks(pulse.W, sonar__colors_power_isBW);
-                        let mt_px = sonar__mks2px(pulse.R, data.depth_mks);
+                        mt_px = sonar__mks2px(pulse.R, sonar__depth_max * sonar__mks2m);
                         html += '<div class="sonar__2D_pulse" title="' + (Math.round((pulse.R / sonar__mks2m) * 100) / 100) + 'm R=' + pulse.R + ' W=' + pulse.W + '" w_mks="' + pulse.W + '" style="left:' + left_px + 'px; top:' + mt_px + 'px; width:' + (sonar__pulse_w_px - 2) + 'px; background-color:' + pulse_color + '; z-index:' + pulse.W + '; "></div>';
                     }
 
@@ -445,7 +447,7 @@
                             continue; //only fish over bottom                            
                         }
                         pulse_color = sonar__getColor_power_mks(pulse.W, sonar__colors_power_isBW); //fish over bottom 
-                        let mt_px = sonar__mks2px(pulse.R, data.depth_mks);
+                        let mt_px = sonar__mks2px(pulse.R, sonar__depth_max * sonar__mks2m); //data.depth_mks
                         html += '<div class="logic_pulseOverBottom" title="' + (Math.round((pulse.R / sonar__mks2m) * 100) / 100) + 'm R=' + pulse.R + ' W=' + pulse.W + '" w_mks="' + pulse.W + '" style="top:' + mt_px + 'px; width:' + (sonar__pulse_w_px - 2) + 'px; background-color:' + pulse_color + '; "></div>';
                     }
                     html += '</div>';
