--- a/JS/V1/public_html/3D.html
+++ b/JS/V1/public_html/3D.html
@@ -126,7 +126,7 @@
                 let sonar__mks2px_fullScale_dx = 1;
                 let sonar__getOffsetLat_px_dx = 1;
                 const sonar__block_size_px = 800;
-                const sonar__logic_pulsesOverBottom_block_h_px = 100;
+                const sonar__pulses_block_h_px = 100;
                 const sonar__mks2m = 1367.0;
                 let sonar__pulse_w_px = 10;
                 let sonar__3D_pointsLatLng = [];
@@ -352,7 +352,7 @@
                     $('#sonar__palette_depth_max_text').html(Math.round(sonar__depth_max * 100) / 100 + 'm');
 
                     sonar__getColor_depth_m_dx = (sonar__depth_max - sonar__depth_min) / sonar__colors_depth.length;
-                    sonar__mks2px_fullScale_dx = (2 * depth_max_allow * sonar__mks2m) / sonar__logic_pulsesOverBottom_block_h_px;
+                    sonar__mks2px_fullScale_dx = (depth_max_allow * sonar__mks2m) / sonar__pulses_block_h_px;
                     sonar__getOffsetLng_px_dx = (sonar__lng_max - sonar__lng_min) / sonar__block_size_px;
                     sonar__getOffsetLat_px_dx = (sonar__lat_max - sonar__lat_min) / sonar__block_size_px; //max size paper
                     sonar__pulse_w_px = Math.round(0.00001 / sonar__getOffsetLng_px_dx);
@@ -405,7 +405,7 @@
                 function sonar__2D_point(lat, lng, data, isVertical) {
                     const depth_color = sonar__getColor_depth_m(data.depthM);
                     const left_px = isVertical ? sonar__block_size_px - sonar__getOffsetLat_px(lat) : sonar__getOffsetLng_px(lng);
-                    let mt_px = 5+sonar__mks2px(data.depth_mks, sonar__depth_max * sonar__mks2m);
+                    let mt_px = 5 + sonar__mks2px_fullScale(data.depth_mks, sonar__depth_max * sonar__mks2m);
 
                     let html = '<div class="sonar__2D_pulses" title="' + (Math.round(data.depthM * 100) / 100) + 'm" lat="' + lat + '" lng="' + lng + '" style="left:' + left_px + 'px; top:' + mt_px + 'px; background-color:' + depth_color + '; width:' + sonar__pulse_w_px + 'px; "></div>';
                     for (const pulse of data.pulses) {
@@ -413,27 +413,10 @@
                             continue; //only fish over bottom                            
                         }
                         const pulse_color = sonar__getColor_power_mks(pulse.W, sonar__colors_power_isBW);
-                        mt_px = sonar__mks2px(pulse.R, sonar__depth_max * sonar__mks2m);
+                        mt_px = sonar__mks2px_fullScale(pulse.R);
                         html += '<div class="sonar__2D_pulse" title="' + (Math.round((pulse.R / sonar__mks2m) * 100) / 100) + 'm R=' + pulse.R + ' W=' + pulse.W + '" w_mks="' + pulse.W + '" style="left:' + left_px + 'px; top:' + mt_px + 'px; width:' + (sonar__pulse_w_px - 2) + 'px; background-color:' + pulse_color + '; z-index:' + pulse.W + '; "></div>';
                     }
-
                     return html;
-                }
-
-
-                function sonar__palettes() {
-                    for (const color of sonar__colors_depth) {
-                        const dv = '<div class="palette__item d-inline-block" style="background-color:' + color + '"></div>';
-                        $('#sonar__palette_depth').append(dv);
-                    }
-                    for (const color of sonar__palette_power_rgb) {
-                        const dv = '<div class="palette__item d-inline-block" style="background-color:' + color + '"></div>';
-                        $('#sonar__palette_power_rgb').append(dv);
-                    }
-                    for (const color of sonar__palette_power_bw) {
-                        const dv = '<div class="palette__item d-inline-block" style="background-color:' + color + '"></div>';
-                        $('#sonar__palette_power_bw').append(dv);
-                    }
                 }
 
                 function sonar__3D_point(lat, lng, data) {
@@ -446,8 +429,8 @@
                         if (pulse.R >= (data.depth_mks - 100)) {
                             continue; //only fish over bottom                            
                         }
-                        pulse_color = sonar__getColor_power_mks(pulse.W, sonar__colors_power_isBW); //fish over bottom 
-                        let mt_px = sonar__mks2px(pulse.R, sonar__depth_max * sonar__mks2m); //data.depth_mks
+                        pulse_color = sonar__getColor_power_mks(pulse.W, sonar__colors_power_isBW); //fish over bottom                         
+                        let mt_px = sonar__mks2px_fullScale(pulse.R + (sonar__depth_max - data.depthM) * sonar__mks2m); //прижмем ко дну, а не к поверхности
                         html += '<div class="logic_pulseOverBottom" title="' + (Math.round((pulse.R / sonar__mks2m) * 100) / 100) + 'm R=' + pulse.R + ' W=' + pulse.W + '" w_mks="' + pulse.W + '" style="top:' + mt_px + 'px; width:' + (sonar__pulse_w_px - 2) + 'px; background-color:' + pulse_color + '; "></div>';
                     }
                     html += '</div>';
@@ -487,15 +470,15 @@
                     return isWB ? sonar__palette_power_bw[idx] : sonar__palette_power_rgb[idx];
                 }
 
-                function sonar__mks2px(mks, point_depth_mks) {
-                    const sonar__mks2px_dx = point_depth_mks / sonar__logic_pulsesOverBottom_block_h_px;
-                    let px = Math.round(mks / sonar__mks2px_dx);
-                    px = Math.min(Math.max(px, 0), sonar__logic_pulsesOverBottom_block_h_px); //constrain from to
-                    return px;
-                }
+                /*function sonar__mks2px(mks, point_depth_mks) {
+                 const sonar__mks2px_dx = point_depth_mks / sonar__pulses_block_h_px;
+                 let px = Math.round(mks / sonar__mks2px_dx);
+                 px = Math.min(Math.max(px, 0), sonar__pulses_block_h_px); //constrain from to
+                 return px;
+                 }*/
                 function sonar__mks2px_fullScale(mks) {
                     let px = Math.round(mks / sonar__mks2px_fullScale_dx);
-                    px = Math.min(Math.max(px, 0), sonar__logic_pulsesOverBottom_block_h_px); //constrain from to
+                    px = Math.min(Math.max(px, 0), sonar__pulses_block_h_px); //constrain from to
                     return px;
                 }
 
@@ -509,6 +492,21 @@
                     return px;
                 }
 
+                function sonar__palettes() {
+                    for (const color of sonar__colors_depth) {
+                        const dv = '<div class="palette__item d-inline-block" style="background-color:' + color + '"></div>';
+                        $('#sonar__palette_depth').append(dv);
+                    }
+                    for (const color of sonar__palette_power_rgb) {
+                        const dv = '<div class="palette__item d-inline-block" style="background-color:' + color + '"></div>';
+                        $('#sonar__palette_power_rgb').append(dv);
+                    }
+                    for (const color of sonar__palette_power_bw) {
+                        const dv = '<div class="palette__item d-inline-block" style="background-color:' + color + '"></div>';
+                        $('#sonar__palette_power_bw').append(dv);
+                    }
+                }
+
 
             </script>
         </main>
@@ -519,14 +517,14 @@
 <style>
     #sonar__2D_block_latconst_lng{
         width: 100%; 
-        height: 140px; 
+        height: 130px; 
         overflow: scroll;
         position: relative;
         border: 1px solid #003580;        
     }
     #sonar__2D_block_lat_lngconst{
         width: 100%; 
-        height: 140px; 
+        height: 130px; 
         overflow: scroll;
         position: relative;
         border: 1px solid #003580;        
@@ -568,7 +566,7 @@
     .logic_pulsesOverBottom_block{
         display: block;
         float: left;        
-        height: 100px; /*sonar__logic_pulsesOverBottom_block_h_px*/
+        height: 100px; /*sonar__pulses_block_h_px*/
         box-shadow: 0px 8px 0px 0px black;       
         position: absolute;        
         z-index: 500;
@@ -598,7 +596,7 @@
     .logic_pulsesFull_block{
         display: block;
         float: left;        
-        height: 100px; /*sonar__logic_pulsesOverBottom_block_h_px*/
+        height: 100px; /*sonar__pulses_block_h_px*/
         box-shadow: 0px 8px 0px 0px black;     
         position: absolute;
         opacity: 0.4;
